# netbot

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  boxtest.py  cli.py  cog_scn.py  cog_tickets.py  compose.yaml  devlog.md  disclient.py  formatting.py  greplogs  imap.py  main.py  model.py  netbot.py  netbox.py  pylintrc  pyproject.toml  redaction_queue.json  redaction_queue.py  redmine.py  requirements.txt  session.py  sync-issues.py  synctime.py  test_cog_scn.py  test_cog_tickets.py  test_imap.py  test_messages.py  test_netbot.py  test_redmine.py  test_synctime.py  test_tickets.py  test_utils.py  threader-daemon.service  threader.py  threader_daemon.py  (+4 more)
.github/workflows/: python-app.yml
data/: 1712.json  New text message from 5551212.eml  custom-fields.json  custom_fields.json  empty-name.eml  groups.json  message-126.eml  message-186.eml  message-187.eml  message-189.eml  message-190.eml  message-191.eml  message-666.eml  message-doctype.eml  message-err-205.eml  message-err-274.eml  message-err-422.eml  message-err-425.eml  message-err-428.eml  message-err-4920.eml  roles.json  trackers.json  users.json  with-tracker.eml
data/enumerations/: issue_priorities.json  time_entry_activities.json
data/groups/: 2279.json  (+9 more)
docs/: cli.md  design.md  devlog.md  netbot-usage.md  netbot.md  redmine.md  threader.md
finetuning/: .gitignore  README.md  redact.py
github/: session.py  tickets.py
netbot/: __about__.py  __main__.py  cog_scn.py  cog_status.py  cog_tickets.py  config.py  formatting.py  llm_redactor.py  netbot.py  redactor.py
redactor/: redactor.py  redactor_client.py
redmine/: model.py  redmine.py  session.py  synctime.py  tickets.py  users.py
test/: New text message from (646) 266-3154.eml  message-13.eml  message-161.eml  message-err-205.eml  message-err-274.eml  message-err-426.eml  message-err-443.eml  test-ticket.json
tests/: __main__.py  mock_session.py  test_cog_scn.py  test_cog_status.py  test_cog_tickets.py  test_imap.py  test_netbot.py  test_redaction.py  test_redmine.py  test_synctime.py  test_tickets.py  test_users.py  test_utils.py
threader/: __main__.py  imap.py  threader.py
(+14 files in other folders)
