[project]
name = "netbot"
version = "0.5.0"
description = "A Discord bot to capture tickets and todos."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11.12",
    "audioop-lts>=0.2.1",
    "dateparser>=1.2.2",
    "humanize>=4.12.0",
    "imapclient>=3.0.1",
    "torch>=2.0.0",
    "transformers>=4.36.0",
    "accelerate>=0.25.0",
    "peft>=0.7.0",
    "py-cord>=2.6.1",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
]
